# webscrapping-housing-chile

./: LICENSE  README.md  pyproject.toml
tests/: test_webscrapping_housing_chile.py
webscrapping_housing_chile/features_scrapper/: pipeline.py  scrapper.py
webscrapping_housing_chile/s3_connection/: s3_handlers.py
webscrapping_housing_chile/url_scrapper/: Comunas_RM.csv  pipeline.py  scrapper.py  test.ipynb
